// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: reactDocsExample.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/reactDocsExample.tsx",
        "range": {
          "end": {
            "column": 22,
            "line": 11
          },
          "start": {
            "column": 2,
            "line": 9
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withDerivedInternalState.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withDerivedInternalState.tsx",
        "range": {
          "end": {
            "column": 27,
            "line": 13
          },
          "start": {
            "column": 2,
            "line": 10
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withEmptyDeps.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withEmptyDeps.tsx",
        "range": {
          "end": {
            "column": 8,
            "line": 12
          },
          "start": {
            "column": 2,
            "line": 10
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withEventLogic.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withEventLogic.tsx",
        "range": {
          "end": {
            "column": 20,
            "line": 11
          },
          "start": {
            "column": 2,
            "line": 7
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withInternalAndExternalState.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withInternalAndExternalState.tsx",
        "range": {
          "end": {
            "column": 33,
            "line": 15
          },
          "start": {
            "column": 2,
            "line": 13
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withMultiple.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withMultiple.tsx",
        "range": {
          "end": {
            "column": 30,
            "line": 13
          },
          "start": {
            "column": 2,
            "line": 11
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches invalid fixture: withoutDeps.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "value": "plugin"
      },
      "location": {
        "path": "src/react-effect/__tests__/fixtures/noEffectPassStateToParent/invalid/withoutDeps.tsx",
        "range": {
          "end": {
            "column": 4,
            "line": 12
          },
          "start": {
            "column": 2,
            "line": 10
          }
        }
      },
      "message": "This effect notifies a parent callback when local state changes. Call the parent'ss callback from the same event handler that sets the callback instead: https://react.dev/learn/you-might-not-need-an-effect#passing-data-to-the-parent",
      "severity": "ERROR"
    }
  ]
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches valid fixture: withExternalState.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": []
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches valid fixture: withLiteral.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": []
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches valid fixture: withNoArgs.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": []
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches valid fixture: withProp.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": []
}
"
`;

exports[`nEffectPassStateToParentoEffectDeriveState matches valid fixture: withRef.tsx 1`] = `
"{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": []
}
"
`;
